fix: correccion de permisos
